# BCMtools

./: .travis.yml  BCMtools.cabal  HiC.cabal  README.md  stack.yaml
app/BCMtools/: Convert.hs  Types.hs  View.hs
exe/: Main.hs
exe/BCMtools/: Convert.hs  Types.hs  View.hs
src/: BCM.hs  HiC.hs
src/BCM/: Binary.hs  DiskMatrix.hs  IOMatrix.hs  Visualize.hs
src/BCM/Matrix/: Instances.hs
src/BCM/Visualize/: Internal.hs
src/BCM/Visualize/Internal/: Types.hs
src/HiC/: DiskMatrix.hs  IOMatrix.hs  Visualize.hs
src/HiC/Visualize/: Internal.hs
tex/: main.tex
