name:                BCMtools
version:             0.1.0
synopsis:            Big Contact Map Tools
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2015 Kai Zhang
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     
    BCM
    BCM.Visualize
    BCM.Visualize.Internal
    BCM.Visualize.Internal.Types
    BCM.DiskMatrix
    BCM.IOMatrix
    BCM.Matrix.Instances

  -- other-modules:       
  build-depends:
      base >=4.0 && <5.0
    , bytestring >=0.10
    , transformers >=0.4
    , data-binary-ieee754 >=0.4
    , binary >=0.7
    , conduit >=1.2
    , conduit-extra
    , colour
    , data-default-class
    , unordered-containers
    , vector
    , dlist
    , zlib
    , mtl
    , matrices >=0.4.0

  hs-source-dirs:      src
  default-language:    Haskell2010

executable bcmtools
  hs-source-dirs:   exe
  main-is: Main.hs
  build-depends:
      base >=4.0 && <5.0
    , BCMtools
    , binary
    , optparse-applicative
    , conduit
    , conduit-extra
    , resourcet
    , bytestring-lexing
    , bytestring
    , unordered-containers
    , split
    , data-default-class

  default-language:    Haskell2010
